2009-03-22  Ben Van Mechelen  <me@benvm.be>

	* nl.po:
        All translatable strings translated


2009-03-22  Ben Van Mechelen  <me@benvm.be>

	* nl.po:
		Some more translation work
		

2009-03-21  Ben Van Mechelen  <me@benvm.be>

	* garmon.pot:
	* nl.po:
		Some initial work on the dutch translation.
	

2009-03-21  Ben Van Mechelen  <me@benvm.be>

	* POTFILES.in:
	* garmon.pot:
	* nl.po:
		Updated the horribly outdated po files